@@ -17,6 +17,7 @@ gradleVersionUpdate = "0.41.0"
 jacoco = "0.8.7"
 jetbrainsAppleGradlePlugin = "212.4638.14-0.14"
 jetbrainsCompose = "1.2.0-beta02"
+jetbrainsComposeCompiler = "1.3.2"
 koin = "3.1.4"
 kotlin = "1.7.10"
 kotlinx-coroutines = "1.6.4"
@@ -64,11 +65,13 @@ gradleSqlDelightPlugin = { module = "com.squareup.sqldelight:gradle-plugin", ver
 gradleVersionCatalogUpdatePlugin = { module = "nl.littlerobots.vcu:plugin", version.ref = "gradleVersionCatalogUpdate" }
 gradleVersionUpdatePlugin = { module = "com.github.ben-manes:gradle-versions-plugin", version.ref = "gradleVersionUpdate" }
 gradleMokoResourcesGeneratorPlugin = { module = "dev.icerock.moko:resources-generator", version.ref = "moko-resources"}
-jetbrains-compose-compiler = { module = "org.jetbrains.compose.compiler:compiler", version.ref = "jetbrainsCompose" }
+jetbrains-compose-compiler = { module = "org.jetbrains.compose.compiler:compiler", version.ref = "jetbrainsComposeCompiler" }
+jetbrains-compose-runtime = { module = "org.jetbrains.compose.runtime:runtime", version.ref = "jetbrainsCompose" }
 jetbrains-compose-foundation = { module = "org.jetbrains.compose.foundation:foundation", version.ref = "jetbrainsCompose" }
 jetbrains-compose-material = { module = "org.jetbrains.compose.material:material", version.ref = "jetbrainsCompose" }
+jetbrains-compose-material-icons-extended = { module = "org.jetbrains.compose.material:material-icons-extended", version.ref = "jetbrainsCompose" }
 jetbrains-compose-material3 = { module = "org.jetbrains.compose.material3:material3", version.ref = "jetbrainsCompose" }
-jetbrains-compose-runtime = { module = "org.jetbrains.compose.runtime:runtime", version.ref = "jetbrainsCompose" }
+jetbrains-compose-animation = { module = "org.jetbrains.compose.animation:animation", version.ref = "jetbrainsCompose" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 koin-androix-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin" }
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
