@@ -32,6 +32,8 @@ See link:{link-repository}/compare/v0.1.0...main[changeset]
 
 === Changed
 
+- Change JetBrains Compose dependencies to VersionCatalog
+
 === Removed
 
 === Fixed
